test/error/parse/ExpectSemicolon.mod
MODULE ExpectSemicolon;
VAR x: INTEGER
END ExpectSemicolon.
